--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ollamapy"
-version = "0.3.0"
+version = "0.4.0"
 description = "A simple Python package for Ollama utilities"
 authors = [{name = "The Lazy Artist", email = "TheRealLazyArtist@iCloud.com"}]
 requires-python = ">=3.8"
@@ -34,6 +34,7 @@ Issues = "https://github.com/ScienceIsVeryCool/OllamaPy/issues"
 
 [project.optional-dependencies]
 dev = ["pytest", "black", "isort", "mypy"]
+test = ["pytest>=6.0.0"]
 
 [project.scripts]
 ollamapy = "ollamapy.main:main"
