--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,21 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+    --disable-warnings
+    --cov-report=term-missing
+    --cov-report=html:htmlcov
+    --cov-report=xml
 markers =
-    vibetest: marks tests as vibe tests for AI decision-making evaluation
+    unit: Unit tests
+    integration: Integration tests
+    e2e: End-to-end tests
+    slow: Slow running tests
+    requires_flask: Tests that require Flask dependencies
+    requires_ollama: Tests that require Ollama server
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
