--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: write
     
     steps:
     - uses: actions/checkout@v4
@@ -23,7 +26,12 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine wheel
+        pip install build twine wheel pytest
+    
+    - name: Run quick tests before building
+      run: |
+        pip install -e .
+        python -c "from src.ollamapy.main import main; print('✅ Basic import successful')"
     
     - name: Build package
       run: |
@@ -34,7 +42,7 @@ jobs:
         twine check dist/*
     
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dist
         path: dist/
@@ -43,6 +51,9 @@ jobs:
   test-install:
     needs: build
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
+      actions: read
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -55,7 +66,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     
     - name: Download build artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
