--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     environment: release
+    permissions:
+      contents: write
+      id-token: write
+      actions: read
     
     steps:
     - uses: actions/checkout@v4
@@ -64,20 +68,13 @@ jobs:
         zip -r ../ollamapy-standalone.zip .
     
     - name: Upload Release Assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./ollamapy-standalone.zip
-        asset_name: ollamapy-standalone-${{ github.event.release.tag_name }}.zip
-        asset_content_type: application/zip
+        files: ./ollamapy-standalone.zip
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Update GitHub Pages
-      run: |
-        # Trigger documentation rebuild
-        curl -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/ScienceIsVeryCool/OllamaPy/actions/workflows/deploy-docs.yml/dispatches \
-          -d '{"ref":"main"}'
+      uses: peter-evans/repository-dispatch@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        event-type: deploy-docs
