--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,14 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     permissions:
       contents: read
       checks: write
       pull-requests: write
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     
     steps:
     - uses: actions/checkout@v4
@@ -33,6 +32,9 @@ jobs:
           ~/.cache/pip
           ~/.local/share/virtualenvs
         key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements*.txt', 'pyproject.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-${{ matrix.python-version }}-
+          ${{ runner.os }}-pip-
     
     - name: Install dependencies
       run: |
@@ -57,8 +59,8 @@ jobs:
         pytest tests/ -v --cov=src/ollamapy --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'
-      uses: codecov/codecov-action@v4
+      if: matrix.python-version == '3.10'
+      uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
         fail_ci_if_error: true
@@ -91,7 +93,7 @@ jobs:
         "
 
   security:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: read
       security-events: write
