--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       pull-requests: write
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.11']
     
     steps:
     - uses: actions/checkout@v4
@@ -56,10 +56,21 @@ jobs:
     
     - name: Run tests with pytest
       run: |
-        pytest tests/ -v --cov=src/ollamapy --cov-report=xml --cov-report=html
+        pytest tests/ -v --cov=src/ollamapy --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=70 --junit-xml=pytest-results.xml
+    
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results-${{ matrix.python-version }}
+        path: |
+          pytest-results.xml
+          htmlcov/
+          coverage.xml
+        retention-days: 30
     
     - name: Upload coverage to Codecov
-      if: matrix.python-version == '3.10'
+      if: matrix.python-version == '3.11'
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
