Fix deploy-coverage job condition for pull requests
- Add pull_request event condition to allow deployment on PRs
- This will enable coverage reports deployment without needing to merge first

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,7 +127,7 @@ jobs:
   deploy-coverage:
     runs-on: self-hosted
     needs: test
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/fix-github-pages'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/fix-github-pages' || github.event_name == 'pull_request'
     permissions:
       contents: read
       pages: write
